--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <p>
           This project was coded by
           <a href="#" target="_blank"> <a href="https://github.com/Bethel-21"></a>Bethelhem Daniel Fenta</a> and is
-          <a href="#" target="_blank"> on GitHub</a> and
+          <a href="#" target="_blank"> <a href="https://github.com/Bethel-21/My-weather-application"></a>on GitHub</a> and
           <a href="#" target="_blank">hosted on Netlify</a>
         </p>
       </footer>
