--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
       <footer>
         <p>
           This project was coded by
-          <a href="#" target="_blank"> <a href="https://github.com/Bethel-21"></a>Bethelhem Daniel Fenta</a> and is
-          <a href="#" target="_blank"> <a href="https://github.com/Bethel-21/My-weather-application"></a>on GitHub</a> and
+          <a href="#" target="_blank"> <a href="https://github.com/Bethel-21" target="_blank">Bethelhem Daniel Fenta</a></a> and is
+          <a href="#" target="_blank"> <a href="https://github.com/Bethel-21/My-weather-application" target="_blank">on GitHub</a></a> and
           <a href="#" target="_blank">hosted on Netlify</a>
         </p>
       </footer>
