Added a link to netlify

--- a/index.html
+++ b/index.html
@@ -47,9 +47,27 @@
       <footer>
         <p>
           This project was coded by
-          <a href="#" target="_blank"> <a href="https://github.com/Bethel-21" target="_blank">Bethelhem Daniel Fenta</a></a> and is
-          <a href="#" target="_blank"> <a href="https://github.com/Bethel-21/My-weather-application" target="_blank">on GitHub</a></a> and
-          <a href="#" target="_blank">hosted on Netlify</a>
+          <a href="#" target="_blank">
+            <a href="https://github.com/Bethel-21" target="_blank"
+              >Bethelhem Daniel Fenta</a
+            ></a
+          >
+          and is
+          <a href="#" target="_blank">
+            <a
+              href="https://github.com/Bethel-21/My-weather-application"
+              target="_blank"
+              >on GitHub</a
+            ></a
+          >
+          and
+          <a href="#" target="_blank">
+            <a
+              href="https://superb-bonbon-0d1312.netlify.app"
+              target="_blank"
+            ></a
+            >hosted on Netlify</a
+          >
         </p>
       </footer>
     </div>
