--- a/index.html
+++ b/index.html
@@ -62,11 +62,8 @@
           >
           and
           <a href="#" target="_blank">
-            <a
-              href="https://superb-bonbon-0d1312.netlify.app"
-              target="_blank"
-            ></a
-            >hosted on Netlify</a
+            <a href="https://superb-bonbon-0d1312.netlify.app"></a>hosted on
+            Netlify</a
           >
         </p>
       </footer>
