--- a/index.html
+++ b/index.html
@@ -62,8 +62,9 @@
           >
           and
           <a href="#" target="_blank">
-            <a href="https://superb-bonbon-0d1312.netlify.app"></a>hosted on
-            Netlify</a
+            <a href="https://superb-bonbon-0d1312.netlify.app"
+              >hosted on Netlify</a
+            ></a
           >
         </p>
       </footer>
